updated yml file and summary

--- a/.github/workflows/ghaction-allure.yml
+++ b/.github/workflows/ghaction-allure.yml
@@ -190,15 +190,14 @@ jobs:
           GITHUB_REPOSITORY: ${{ github.repository }}
           GITHUB_RUN_ID: ${{ github.run_id }}
 
-      - name: Export email body
-        id: export_email
+      - name: Read email subject
+        id: read_subject
         run: |
-          echo 'EMAIL_BODY<<EOF' >> $GITHUB_ENV
-          cat email-body.txt >> $GITHUB_ENV
-          echo 'EOF' >> $GITHUB_ENV
+          subj=$(cat email-subject.txt)
+          echo "subject=$subj" >> $GITHUB_OUTPUT
 
       - name: Send email with report URL
-        if: ${{ env.EMAIL_BODY != '' }}
+        if: always()
         continue-on-error: true
         uses: dawidd6/action-send-mail@v6
         with:
@@ -206,8 +205,9 @@ jobs:
           server_port: 465
           username: ${{ secrets.EMAIL_USERNAME }}
           password: ${{ secrets.EMAIL_PASSWORD }}
-          subject: "${{ env.EMAIL_SUBJECT_PREFIX }} - $(date '+%d-%b-%Y')"
+          subject: "${{ steps.read_subject.outputs.subject }}"
           to: ${{ secrets.EMAIL_RECIPIENT_LIST }}
           cc: ${{ secrets.EMAIL_CC_LIST }}
           from: ${{ secrets.EMAIL_USERNAME }}
-          body: ${{ env.EMAIL_BODY }}
+          content_type: text/html
+          html_body: file://email-body.html
